Renamed bg-2.jpg to bg.jpg

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -20,7 +20,7 @@ body {
 }
 
 #main {
-  background-image: url('../images/bg-2.jpg');
+  background-image: url('../images/bg.jpg');
   background-repeat: no-repeat;
   margin: 0px auto 0px;
   padding-top: 75px;
