Got Cufon working in IE6 and FF3

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,14 @@
-<div id="title_box">
-  <h1 id="header_title"><%= APP_TITLE.upcase %></h1>
+<div id="dem_party_title_box">
+  <h2 id="the">
+    THE
+  </h2>
+  <h1 id="democratic_party">
+    <span class="large-letter">D</span>EMOCRATIC
+    <span class="large-letter P">P</span>ARTY
+  </h1>
+</div>
+<div id="site_title_box">
+  <h1 id="site_title"><%= APP_TITLE.upcase %></h1>
 </div>
 <%= link_to "", "http://democrats.org", :id => "title_link_1" %>
 <%= link_to "", root_path, :id => "title_link_2" %>
