--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,11 +4,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script> 
   <%= javascript_include_tag "cufon-yui", "OFL_Sorts_Mill_Goudy_500.font.js" %>
   <title><%= APP_TITLE %></title>
   <%= stylesheet_link_tag 'reset', 'application' %>
   <script type="text/javascript">
-    Cufon.replace('h1#header_title');
+    Cufon.replace('h1#site_title');
+    Cufon.replace('h2#the');
+    Cufon.replace('h1#democratic_party');
   </script>
   <!--[if IE]>
   <%= stylesheet_link_tag 'ie' %>
