Baskerville Cufon font integration

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,8 +3,8 @@
     THE
   </h2>
   <h1 id="democratic_party">
-    <span class="large-letter">D</span>EMOCRATIC
-    <span class="large-letter P">P</span>ARTY
+    <span id="democratic"><span class="large-letter">D</span>EMOCRATIC</span>
+    <span id="party"><span class="large-letter P">P</span>ARTY</span>
   </h1>
 </div>
 <div id="site_title_box">
