--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,13 +5,17 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script> 
-  <%= javascript_include_tag "cufon-yui", "OFL_Sorts_Mill_Goudy_500.font.js" %>
+  <%= javascript_include_tag "cufon-yui", "Baskerville-Normal_500.font.js" %>
   <title><%= APP_TITLE %></title>
   <%= stylesheet_link_tag 'reset', 'application' %>
   <script type="text/javascript">
     Cufon.replace('h1#site_title');
-    Cufon.replace('h2#the');
-    Cufon.replace('h1#democratic_party');
+    Cufon.replace('h2#the', {
+      color: '-linear-gradient(0.1=#EEEEFF, 1=#FFFFFF)'
+    });
+    Cufon.replace('h1#democratic_party', {
+      color: '-linear-gradient(0.1=#EEEEFF, 1=#FFFFFF)'
+    });
   </script>
   <!--[if IE]>
   <%= stylesheet_link_tag 'ie' %>
