--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,3 +1,7 @@
+h1, h2 {
+  font-weight: 100;
+}
+
 body {
   background-image: url('../images/horiz-tile-bg.jpg');
   background-repeat: repeat-x;
@@ -105,13 +109,18 @@ h2#the {
 
 h1#democratic_party {
   position: relative;
-  top: 8px;
-  left: 26px;
+  top: 7px;
+  left: 25px;
   font-size: 22px;
 }
 
+h1 #party {
+  position: relative;
+  left: -5px;
+}
+
 .large-letter {
-  font-size: 31px;
+  font-size: 33px;
 }
 
 .P {
