--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script> 
   <%= javascript_include_tag "cufon-yui", "Baskerville-Normal_500.font.js" %>
   <title><%= APP_TITLE %></title>
-  <%= stylesheet_link_tag 'reset', 'application' %>
+  <%= stylesheet_link_tag 'screen', 'application' %>
   <script type="text/javascript">
     Cufon.replace('h1#site_title');
     Cufon.replace('h2#the', {
@@ -22,19 +22,27 @@
   <![endif]-->
 </head>
 <body>
-  <div id="container">
-    <div id="header">
-      <%= render :partial => "shared/header" %>
+  <div id="container" class="container">
+    <div id="left" class="span-4">
     </div>
-    <div id="main">
-      <div id="content">
+    <div id="center" class="span-24">
+      <div id="header" class="span-24 last">
+        <%= render :partial => "shared/header" %>
+      </div>
+      <div id="main" class="span-24 last">
         <%= yield %>
       </div>
+      <div id="main_bottom" class="span-24 last">
+        <div id="main_bottom_left">
+        </div>
+        <div id="main_bottom_right">
+        </div>
+      </div>
+      <div id="footer" class = "span-24 last">
+        <%= render :partial => "shared/footer" %>
+      </div>
     </div>
-    <div id="main-bottom">
-    </div>
-    <div id="footer">
-      <%= render :partial => "shared/footer" %>
+    <div id="right" class="span-4 last">
     </div>
   </div>
   <script type="text/javascript"> Cufon.now(); </script>
