Got layout to work in IE6

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,4 @@
-<div id="dem_party_title_box">
+<div id="dem_party_title_box" onclick="window.location='http://democrats.org'">
   <h2 id="the">
     THE
   </h2>
@@ -7,8 +7,6 @@
     <span id="party"><span class="large-letter P">P</span>ARTY</span>
   </h1>
 </div>
-<div id="site_title_box">
+<div id="site_title_box" onclick="window.location='/'">
   <h1 id="site_title"><%= APP_TITLE.upcase %></h1>
 </div>
-<%= link_to "", "http://democrats.org", :id => "title_link_1" %>
-<%= link_to "", root_path, :id => "title_link_2" %>
