--- a/app/views/partners/new.html.erb
+++ b/app/views/partners/new.html.erb
@@ -1,2 +1,6 @@
 <h1>New Partner</h1>
-<%= render :partial => 'form' %>
+<%= error_messages_for :partner %>
+
+<% form_for @partner do |f| %>
+  <%= render :partial => 'form', :locals => { :f => f, :submit_name => "Save" } %>
+<% end %>
