Added Log In, Log Out and Sign Up header menu links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,9 @@
         <%= render :partial => "shared/header" %>
       </div>
       <div id="main" class="span-24 last">
+        <div id="session_header">
+          <%= session_header %>
+        </div>
         <div id="flash">
           <%= flash_helper %>
         </div>
