Small bug fixes

--- a/app/views/partner_mailer/confirmation.html.erb
+++ b/app/views/partner_mailer/confirmation.html.erb
@@ -1,1 +1,1 @@
-<%= link_to @partner.perishable_token, root_path %>
+<%= link_to "#{root_url}confirm/#{@partner.perishable_token}", "#{root_url}confirm/#{@partner.perishable_token}" %>
