partners should be a collection resource, in preparation for RESTful lookup of partners by key

--- a/app/views/partners/show.html.erb
+++ b/app/views/partners/show.html.erb
@@ -1,2 +1,4 @@
-<h1>Show Partner</h1>
-API Key: <%= @partner.api_key %>
+<h1><%= @partner.name %></h1>
+
+API Key: <%= @partner.api_key %><br/>
+Requests left this hour: <%= @partner.unlimited? ?  'No Limit' : @partner.requests_remaining %>
