Fixed for APP_TITLE

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,5 +8,5 @@
   </h1>
 </div>
 <div id="site_title_box" onclick="window.location='/'">
-  <h1 id="site_title"><%= APP_TITLE.upcase %></h1>
+  <h1 id="site_title"><%= App[:title].upcase %></h1>
 </div>
