--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -5,13 +5,11 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script> 
-  <%= javascript_include_tag "cufon-yui", "Baskerville-Normal_500.font.js" %>
-
-  <%= javascript_include_tag :defaults %>
+  <%= javascript_include_merged :admin %>
   <%= active_scaffold_includes %>
 
   <title><%= APP_TITLE %></title>
-  <%= stylesheet_link_tag 'screen', 'application' %>
+  <%= stylesheet_link_merged :admin %>
   <script type="text/javascript">
     Cufon.replace('h1#site_title');
     Cufon.replace('h2#the', {
@@ -22,7 +20,7 @@
     });
   </script>
   <!--[if IE]>
-  <%= stylesheet_link_tag 'ie' %>
+  <%= stylesheet_link_merged :ie %>
   <![endif]-->
 </head>
 <body>
