--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script> 
 
   <%= javascript_include_merged :application %>
-  <title><%= APP_TITLE %></title>
+  <title><%= App[:title] %></title>
   <%= stylesheet_link_merged :application %>
 
   <script type="text/javascript">
