fix typo, add a 10px margin on everything to fix display problems

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,9 @@
         <div id="flash">
           <%= flash_helper %>
         </div>
-        <%= yield %>
+        <div class="content-wrapper">
+          <%= yield %>
+        </div>
       </div>
       <div id="main_bottom" class="span-24 last">
         <div id="main_bottom_left">
