--- a/app/views/partner_mailer/confirmation.text.html.erb
+++ b/app/views/partner_mailer/confirmation.text.html.erb
@@ -15,7 +15,8 @@
               Welcome!
               <br/>
               <br/>
-              You need to confirm you email address before you can use this site:
+              You need to confirm your email address before you can use this site:
+              <br/>
 
               <%= link_to "#{root_url}confirm/#{@partner.perishable_token}", "#{root_url}confirm/#{@partner.perishable_token}" %>
 
