--- a/app/views/partner_mailer/confirmation.text.plain.erb
+++ b/app/views/partner_mailer/confirmation.text.plain.erb
@@ -1,5 +1,5 @@
 Welcome!
 
-You need to confirm you email address before you can use this site:
+You need to confirm your email address before you can use this site:
           
 <%=  "#{root_url}confirm/#{@partner.perishable_token}" %>
