--- a/app/views/partners/show.html.erb
+++ b/app/views/partners/show.html.erb
@@ -10,37 +10,41 @@
   </thead>
 
   <tr>
+    <td>API Identifier</td>
+    <td><%= @partner.slug %></td>
+  </tr>
+  <tr class="odd">
     <td>API Key</td>
     <td><%= @partner.api_key %></td>
   </tr>
-  <tr class="odd">
+  <tr>
     <td>Unlimited Key</td>
     <td><%= @partner.unlimited? ? 'Yes' : 'No' %></td>
   </tr>
-  <tr>
+  <tr class="odd">
     <td>Organization</td>
     <td><%= @partner.organization %></td>
   </tr>
-  <tr class="odd">
+  <tr>
     <td>Phone Number</td>
     <td><%= @partner.phone_number %></td>
   </tr>
 
-  <tr>
+  <tr class="odd">
     <td>Email</td>
     <td><%= @partner.email %></td>
   </tr>
 
   <% if !@partner.unlimited? %>
-    <tr class="odd">
+    <tr>
       <td>Requests Left this Hour</td>
       <td><%= @partner.unlimited? ?  'No Limit' : @partner.requests_remaining %></td>
     </tr>
-    <tr>
+    <tr class="odd">
       <td>Requests Allowed Per Hour</td>
       <td><%=@partner.max_requests %></td>
     </tr>
-    <tr class="odd">
+    <tr>
       <td>Rate Limit Reset Time</td>
       <td><%=Time.at(@partner.max_requests_reset_time)%></td>
     </tr>
