switched APP_TITLE to App[:title]

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -8,7 +8,7 @@
   <%= javascript_include_merged :admin %>
   <%= active_scaffold_includes %>
 
-  <title><%= APP_TITLE %></title>
+  <title><%= App[:title] %></title>
   <%= stylesheet_link_merged :admin %>
   <!--[if IE]>
   <%= stylesheet_link_merged :ie %>
