--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <html dir="ltr" lang="en-US">
 <head>
   <meta charset="UTF-8" />
-  <title><%= APP_TITLE %></title>
+  <title><%= App[:title] %></title>
   <%= stylesheet_link_merged :new_layout %>
   <link rel="pingback" href="http://open-staging.democrats.org/xmlrpc.php" />
   <meta name='robots' content='noindex,nofollow' />
