--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script> 
   <%= javascript_include_merged :application %>
-  <title><%= APP_TITLE %></title>
+  <title><%= App[:title] %></title>
   <%= stylesheet_link_merged :application %>
   <!--[if IE]>
   <%= stylesheet_link_merged :ie %>
