--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,9 @@
   <p id="tagline"><span id="tagline-prefix">//</span> Resources from the DNC's Technology, New Media and Targeting Teams</p>
   <div class="menu">
     <ul>
-      <li id="blog-link"><a href="http://open-staging.democrats.org">Blog</li>
+      <li id="blog-link"><a href="http://open-staging.democrats.org">Blog</a></li>
       <li id="open-api-link"><a href="#">Open API</a></li>
-      <li id="open-source-link"><a href="https://github.com/organizations/dnclabs">Open Source</a></li>
+      <li id="open-source-link"><a href="https://github.com/dnclabs">Open Source</a></li>
       <li id="signup-link"><a href="#">Signup</a></li>
     </ul>
     <img style="margin-left: -1px;" src="http://open-staging.democrats.org/wp-content/themes/opendems/images/opendems_rightend_nav.png" width="38" height="57" />
