--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <p id="tagline"><span id="tagline-prefix">//</span> Resources from the DNC's Technology, New Media and Targeting Teams</p>
   <div class="menu">
     <ul>
-      <li id="blog-link"><a href="http://open-staging.democrats.org">Blog</li>
+      <li id="blog-link"><a href="http://open-staging.democrats.org">Blog</a></li>
       <li id="open-api-link"><a href="#">Open API</a></li>
       <li id="open-source-link"><a href="https://github.com/organizations/dnclabs">Open Source</a></li>
       <li id="signup-link"><a href="#">Signup</a></li>
