only set API key before validations on creation, and don't bother generating it if one is explicitly passed in to initializer.  this may or may not be what we want.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
       <li id="blog-link"><a href="http://open-staging.democrats.org">Blog</a></li>
       <li id="open-api-link"><a href="#">Open API</a></li>
       <li id="open-source-link"><a href="https://github.com/dnclabs">Open Source</a></li>
-      <li id="signup-link"><a href="#">Signup</a></li>
+      <li id="signup-link"><a href="/signup">Signup</a></li>
     </ul>
     <img style="margin-left: -1px;" src="http://open-staging.democrats.org/wp-content/themes/opendems/images/opendems_rightend_nav.png" width="38" height="57" />
   </div><!-- .menu -->
