--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   <meta name='robots' content='noindex,nofollow' />
 </head>
 <body class="single single-post">
+  <% if current_user %><div class="logout"><a href="<%= logout_path %>">Logout</a></div><% end %>
   <a href="http://open-staging.democrats.org"><img id="site-logo" width="470" height="120" src="http://open-staging.democrats.org/wp-content/themes/opendems/images/opendems_logo.png" alt="Open.Dems Logo" /></a>
   <p id="tagline"><span id="tagline-prefix">//</span> Resources from the DNC's Technology, New Media and Targeting Teams</p>
   <div class="menu">
