--- a/public/stylesheets/new_layout.css
+++ b/public/stylesheets/new_layout.css
@@ -1,61 +1,7 @@
-/*
-Theme Name: OpenDems
-Theme URI: http://open.democrats.org/
-Description: WordPress theme for open.democrats.org
-Author: DNC Innovation Lab & New Media Team
-Author URI: http://open.democrats.org/
-Version: 1.0
-*/
-
-/* reset script */
-
-html, body, div, span, applet, object, iframe, table, caption, tbody, tfoot, thead, tr, th, td, 
-del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, 
-h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, 
-dl, dt, dd, ol, ul, li, fieldset, form, label, legend {
-  vertical-align: baseline;
-  font-family: inherit;
-  font-weight: inherit;
-  font-style: inherit;
-  font-size: 100%;
-  outline: 0;
-  padding: 0;
-  margin: 0;
-  border: 0;
-  }
-/* remember to define focus styles! */
-:focus {
-  outline: 0;
-  }
-body {
-  background: white;
-  line-height: 1;
-  color: black;
-  }
-ol, ul {
-  list-style: none;
-  }
-/* tables still need cellspacing="0" in the markup */
-table {
-  border-collapse: separate;
-  border-spacing: 0;
-  }
-caption, th, td {
-  font-weight: normal;
-  text-align: left;
-  }
-/* remove possible quote marks (") from <q> & <blockquote> */
-blockquote:before, blockquote:after, q:before, q:after {
-  content: "";
-  }
-blockquote, q {
-  quotes: "" "";
-  }
-
 /* header */
 
 body {
-  background: #fff url('images/opendems_bg.png') repeat-x;
+  background: #fff url('http://open-staging.democrats.org/wp-content/themes/opendems/images/opendems_bg.png') repeat-x;
   font-family: Helvetica, sans-serif;
 /*  padding-left: 5em;
   padding-right: 5em;
@@ -154,7 +100,7 @@ div.menu ul li:hover {
   text-transform: uppercase;
   padding: 17px 1em 0 1em;
   height: 40px;
-  background: #fff url('images/opendems_btn_bg.png') repeat-x;
+  background: #fff url('http://open-staging.democrats.org/wp-content/themes/opendems/images/opendems_btn_bg.png') repeat-x;
 }
 
 
@@ -195,7 +141,7 @@ ul.post-categories a {
   margin-right: 330px;
   margin-bottom: 2em;
   padding: 40px 0;
-  background: #fff url('images/opendems_crosshatch.png') repeat-x;
+  background: #fff url('http://open-staging.democrats.org/wp-content/themes/opendems/images/opendems_crosshatch.png') repeat-x;
 }
 
 .post .main-loop {
@@ -278,7 +224,7 @@ h2.entry-title a {
 }
 
 .comment-link {
-  background: #fff url('images/opendems_comment_count.png') no-repeat;
+  background: #fff url('http://open-staging.democrats.org/wp-content/themes/opendems/images/opendems_comment_count.png') no-repeat;
   width: 21px;
   height: 26px;
   float: left;
@@ -426,7 +372,7 @@ div.nav-next {
 /* sidebar */
 
 .widget-area {
-  background: #fff url('images/opendems_crosshatch.png') repeat-x;
+  background: #fff url('http://open-staging.democrats.org/wp-content/themes/opendems/images/opendems_crosshatch.png') repeat-x;
   float: right;
   width: 312px;
   padding-top: 2em;
