--- a/app/views/partners/show.html.erb
+++ b/app/views/partners/show.html.erb
@@ -1,52 +1,3 @@
 <h1><%= @partner.name %></h1>
 
-
-<table class="pretty-table">
-  <thead>
-    <tr>
-      <th>Property</th>
-      <th>Value</th>
-    </tr>
-  </thead>
-
-  <tr>
-    <td>API Identifier</td>
-    <td><%= @partner.slug %></td>
-  </tr>
-  <tr class="odd">
-    <td>API Key</td>
-    <td><%= @partner.api_key %></td>
-  </tr>
-  <tr>
-    <td>Unlimited Key</td>
-    <td><%= @partner.unlimited? ? 'Yes' : 'No' %></td>
-  </tr>
-  <tr class="odd">
-    <td>Organization</td>
-    <td><%= @partner.organization %></td>
-  </tr>
-  <tr>
-    <td>Phone Number</td>
-    <td><%= @partner.phone_number %></td>
-  </tr>
-
-  <tr class="odd">
-    <td>Email</td>
-    <td><%= @partner.email %></td>
-  </tr>
-
-  <% if !@partner.unlimited? %>
-    <tr>
-      <td>Requests Left this Hour</td>
-      <td><%= @partner.unlimited? ?  'No Limit' : @partner.requests_remaining %></td>
-    </tr>
-    <tr class="odd">
-      <td>Requests Allowed Per Hour</td>
-      <td><%=@partner.max_requests %></td>
-    </tr>
-    <tr>
-      <td>Rate Limit Reset Time</td>
-      <td><%=Time.at(@partner.max_requests_reset_time)%></td>
-    </tr>
-  <% end %> 
-</table>
+<%= render :partial => 'shared/partner' %>
