--- a/app/views/partners/edit.html.erb
+++ b/app/views/partners/edit.html.erb
@@ -2,4 +2,5 @@
 
 <% form_for @partner, :url => partner_path, :html => { :method => :put } do |f| %>
   <%= render :partial => 'form', :locals => { :f => f, :submit_name => "Update" } %>
+  <%= f.submit 'Update' %>
 <% end %>
