--- a/app/views/fetch_password/index.html.erb
+++ b/app/views/fetch_password/index.html.erb
@@ -1,3 +1,4 @@
+<h3>Recover Password</h3>
 <% form_for @partner, :url => singular_fetch_password_path do |p| %>
   <%= p.text_field :email, :label => "Email" %>
   <%= submit_tag "Fetch" %>
