--- a/app/views/admin/show.html.erb
+++ b/app/views/admin/show.html.erb
@@ -2,5 +2,6 @@
 <div id="admin">
   <ul>
     <li><%= link_to 'Partners', admin_partners_path %></li>
+    <li><%= link_to 'Protected Applications', admin_protected_applications_path %></li>    
   </ul>
 </div>
